tests/operator/add_bool_str.rev
true + "t" // error: operation not supported